fix bug #46047 (SimpleXML converts empty nodes into object with nested array) add test